--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
           hodor - hodor hodor hodor. Hodor. Hodor hodor... Hodor hodor hodor hodor hodor? </p>
         <span class='expandButton'></span>
       </div>
+      <div class="article">
+        <h2>George Michael - Careless Whisper</h2>
+        <p class="date">Nov 5th, 2020</p>
+        <p>I feel so unsure as I take your hand and lead you to the dance floor <br> as the music dies <br> something in your eyes <br> calls to mind a silver screen, and all its sad goodbyes <br> IM NEVER GONNA DANCE AGAIN <br> THESE GUILTY FEET HAVE GOT NO RHYTHM <br> THOUGH ITS EASY TO PRETEND, I KNOW YOURE NOT A FOOOOOOL <br> I SHOULD HAVE KNOWN BETTER THAN TO CHEAT A FRIEND <br> AND WASTE THE CHANCE THAT IIIVE BEEN GIVEN <br> SO IM NEVER GONNA DANCE AGAIN, THE WAY I DANCED WITH <em></em>YOOOOOOOOOOOOOOOOOOOOOOOOOOOU</em></p>
+        <!-- good song -->
+        <span class='expandButton'></span>
+      </div>
     </div>
   </body>
 </html>
